# v2r_localization

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  version.h.in
cfg/: general.yaml  lidar_registra_init.yaml  lidar_registra_regular.yaml  map_server.yaml  parameters.yaml  rviz_display.yaml
cfg/Matcher/: init_matcher.yaml  regular_matcher.yaml
cfg/Observer/: GnssObserver.yaml  ImuObserver.yaml  ImuOdomObserver.yaml  LidarEsObserver.yaml  LidarFeatureObserver.yaml  LidarRegistraObserver.yaml  OdomObserver.yaml  OdomObserver2.yaml
cfg/PointFilter/: init_registra_point_filter.yaml  map_server_point_filter.yaml  map_server_point_filter_withoutNormal.yaml  regular_registra_point_filter.yaml
cfg/Sampler/: registra_rotate_sampler.yaml  registra_trans_rotated_sampler.yaml
include/common/: common.h  compute.h  display.h  eigen_util.h  logger.h  msf_const.h  point_cloud_viewer.h  prompt.h  save_pointcloud.h  save_to_csv.h  time.h  version.h
include/feature_extract/: cluster.h  ground_estimator.h  poles_extract.h  poles_extraction.h
include/feature_localization/: poles_localization.h  poles_localization_hm.h
include/icp_localization/: icp_common.h  icp_evaluator.h  icp_localization.h  icp_matcher.h  icp_point_filter.h  icp_pre_matcher.h  icp_sampler.h
include/map_server/: celled_map.h  map_server.h
include/msf/core/: msf_state.h  observation.h  observation_queue.h  sensor_data.h  sensor_fusion.h
include/msf/observer/: gnss_observer.h  imu_observer.h  imu_odom_observer.h  imu_rtk_observer.h  lidar_es_observer.h  lidar_icp_observer.h  null_observer.h  observer_base.h  odom_observer.h  odom_observer2.h
include/pointmatcher/: DeprecationWarnings.h  IO.h  Parametrizable.h  PointMatcher.h  Registrar.h  transform.h
include/rs_localization/: hello.h  rs_localization.h  rs_localization_impl.h  rs_localization_ros.h
include/sensor/: gps_msg_process.h  lowpass_filter.h
include/visualization/: rviz_display.h
include/yaml/: aes.h  aes_encryptor.h  yaml.h  yaml_parser.h
launch/: demo.launch
lib/: libnabo.so.1.0.7
rviz/: demo.rviz
src/common/: logger.cpp  point_cloud_viewer.cpp  pose_log.cpp  save_pointcloud.cpp  save_to_csv.cpp
src/icp_localization/: icp_evaluator.cpp  icp_localization.cpp  icp_matcher.cpp  icp_point_filter.cpp  icp_pre_matcher.cpp  icp_sampler.cpp  test_icp_localization.cpp
src/map_server/: celled_map.cpp  map_server.cpp  test_map_server.cpp
src/msf/: test_sensor_fusion.cpp
src/msf/core/: sensor_fusion.cpp
src/msf/observer/: gnss_observer.cpp  imu_observer.cpp  imu_odom_observer.cpp  lidar_es_observer.cpp  lidar_icp_observer.cpp  null_observer.cpp  odom_observer.cpp  odom_observer2.cpp  test_observer.cpp
src/pointmatcher/: point_cloud.cpp  transform.cpp
src/rs_localization/: rs_localization.cpp  rs_localization_impl.cpp  rs_localization_ros.cpp  rs_localization_ros_node.cpp
src/sensor/: gps_msg_process.cpp  lowpass_filter.cpp
src/visualization/: rviz_display.cpp
src/yaml/: aes.cpp  aes_encryptor.cpp  yaml_parser.cpp
srv/: map_server.srv
user_config/: user_config.yaml
